# getopt

./: CMakeLists.txt  README.md  meson.build
src/: getopt.c  getopt.h
